--- a/main.css
+++ b/main.css
@@ -172,13 +172,14 @@ ion-icon{
     background-color: white;
     border: 1px solid rgba(255,117,68,255);
     width: 200px;
-    height: fit-content;
 
 }
 .task img{
     max-width: 100%;
-    object-fit: cover;
     border-radius: 5px;
+    object-fit: cover;
+    width:100%;
+    height: 100px;
 
 }
 
@@ -229,7 +230,7 @@ ion-icon{
     padding: 5px;
     border: none;
     border-radius: 5px;
-    background-color: green;
+    background-color: rgb(241, 85, 23);
     color: white;
     font-size: 15px;
     font-weight: bold;
